fix bug code thuộc tour