@@ -1,7 +1,9 @@
+// FavoriteTourService.java - FIXED VERSION
 package tourbooking.vietvivu.service;
 
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import tourbooking.vietvivu.dto.response.TourResponse;
@@ -14,9 +16,11 @@ import tourbooking.vietvivu.repository.TourRepository;
 import tourbooking.vietvivu.repository.UserRepository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class FavoriteTourService {
 
     private final TourRepository tourRepository;
@@ -25,39 +29,95 @@ public class FavoriteTourService {
 
     @Transactional
     public void addToFavorites(String tourId) {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+        try {
+            String username = SecurityContextHolder.getContext().getAuthentication().getName();
+            log.info("Adding tour {} to favorites for user {}", tourId, username);
 
-        Tour tour = tourRepository.findById(tourId)
-                .orElseThrow(() -> new AppException(ErrorCode.TOUR_NOT_FOUND));
+            User user = userRepository.findByUsername(username)
+                    .orElseThrow(() -> {
+                        log.error("User not found: {}", username);
+                        return new AppException(ErrorCode.USER_NOT_EXISTED);
+                    });
 
-        if (!user.getFavoriteTours().contains(tour)) {
+            Tour tour = tourRepository.findById(tourId)
+                    .orElseThrow(() -> {
+                        log.error("Tour not found: {}", tourId);
+                        return new AppException(ErrorCode.TOUR_NOT_FOUND);
+                    });
+
+            if (user.getFavoriteTours().contains(tour)) {
+                log.warn("Tour {} already in favorites for user {}", tourId, username);
+                return;
+            }
+
             user.getFavoriteTours().add(tour);
             userRepository.save(user);
+            log.info("Successfully added tour {} to favorites for user {}", tourId, username);
+
+        } catch (AppException e) {
+            log.error("AppException in addToFavorites: {}", e.getMessage());
+            throw e;
+        } catch (Exception e) {
+            log.error("Unexpected error in addToFavorites", e);
+            throw new RuntimeException("Failed to add tour to favorites: " + e.getMessage(), e);
         }
     }
 
     @Transactional
     public void removeFromFavorites(String tourId) {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+        try {
+            String username = SecurityContextHolder.getContext().getAuthentication().getName();
+            log.info("Removing tour {} from favorites for user {}", tourId, username);
 
-        Tour tour = tourRepository.findById(tourId)
-                .orElseThrow(() -> new AppException(ErrorCode.TOUR_NOT_FOUND));
+            User user = userRepository.findByUsername(username)
+                    .orElseThrow(() -> {
+                        log.error("User not found: {}", username);
+                        return new AppException(ErrorCode.USER_NOT_EXISTED);
+                    });
 
-        user.getFavoriteTours().remove(tour);
-        userRepository.save(user);
+            Tour tour = tourRepository.findById(tourId)
+                    .orElseThrow(() -> {
+                        log.error("Tour not found: {}", tourId);
+                        return new AppException(ErrorCode.TOUR_NOT_FOUND);
+                    });
+
+            user.getFavoriteTours().remove(tour);
+            userRepository.save(user);
+            log.info("Successfully removed tour {} from favorites for user {}", tourId, username);
+
+        } catch (AppException e) {
+            log.error("AppException in removeFromFavorites: {}", e.getMessage());
+            throw e;
+        } catch (Exception e) {
+            log.error("Unexpected error in removeFromFavorites", e);
+            throw new RuntimeException("Failed to remove tour from favorites: " + e.getMessage(), e);
+        }
     }
 
     public List<TourResponse> getMyFavoriteTours() {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+        try {
+            String username = SecurityContextHolder.getContext().getAuthentication().getName();
+            log.info("Getting favorite tours for user {}", username);
 
-        return user.getFavoriteTours().stream()
-                .map(tourMapper::toTourResponse)
-                .toList();
+            User user = userRepository.findByUsername(username)
+                    .orElseThrow(() -> {
+                        log.error("User not found: {}", username);
+                        return new AppException(ErrorCode.USER_NOT_EXISTED);
+                    });
+
+            List<TourResponse> favoriteTours = user.getFavoriteTours().stream()
+                    .map(tourMapper::toTourResponse)
+                    .collect(Collectors.toList());
+
+            log.info("Found {} favorite tours for user {}", favoriteTours.size(), username);
+            return favoriteTours;
+
+        } catch (AppException e) {
+            log.error("AppException in getMyFavoriteTours: {}", e.getMessage());
+            throw e;
+        } catch (Exception e) {
+            log.error("Unexpected error in getMyFavoriteTours", e);
+            throw new RuntimeException("Failed to get favorite tours: " + e.getMessage(), e);
+        }
     }
 }
